# todo-pancakes

./: .gitignore  README.md  db_test.py  main.py  pyproject.toml  run_backend.py
backend/: app.py  config.py  db.py  db_test.py  schema.py  task.py  task_service.py  updates.py
backend/controllers/: item.py
backend/db/: config.py  shared.py
backend/models/: item.py
backend/schemes/: item.py
frontend/: build.yaml  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: backend.dart  client.dart  main.dart  schema.graphql  todo_list_page.dart  utils.dart
frontend/lib/__generated__/: schema.ast.gql.dart  schema.schema.gql.dart  schema.schema.gql.g.dart  serializers.gql.dart  serializers.gql.g.dart
frontend/lib/graphql/: getTasks.graphql  subscribeUpdates.graphql  taskDetails.graphql  tasksUpdateDetails.graphql
frontend/lib/graphql/__generated__/: getTasks.ast.gql.dart  getTasks.data.gql.dart  getTasks.data.gql.g.dart  getTasks.req.gql.dart  getTasks.req.gql.g.dart  getTasks.var.gql.dart  getTasks.var.gql.g.dart  subscribeUpdates.ast.gql.dart  subscribeUpdates.data.gql.dart  subscribeUpdates.data.gql.g.dart  subscribeUpdates.req.gql.dart  subscribeUpdates.req.gql.g.dart  subscribeUpdates.var.gql.dart  subscribeUpdates.var.gql.g.dart  taskDetails.ast.gql.dart  taskDetails.data.gql.dart  taskDetails.data.gql.g.dart  taskDetails.req.gql.dart  (+10 more)
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/web/: index.html
(+3 files in other folders)
